8324123: aarch64: fix prfm literal encoding in assembler